# Rarity

./: Cargo.toml  readme.md
src/: lib.rs
