[package]
name = "rarity"
version = "0.1.0"
description = "Library of useful functions."
license = "MIT"
edition = "2021"
readme = "./readme.md"
authors = ["Silk Rose", "Meadowsys"]
homepage = "https://github.com/SilkRose/Rarity/"
repository = "https://github.com/SilkRose/Rarity"
keywords = []

[dependencies]
atty = { version = "0.2.14" }
camino = { version = "1.1.6" }
fancy-regex = { version = "0.13.0" }
indoc = { version = "2.0.5" }
markdown = { version = "1.0.0-alpha.17" }
num_cpus = {version = "1.16.0" }
rayon = { version = "1.10.0" }
regex = { version = "1.10.4" }
serde = { version = "1", features = ["derive"] }
sha2 = { version = "0.10.8" }
terminal_color_builder = { version = "0.1.1" }
